--- a/rt3s-codeplugs.yaml
+++ b/rt3s-codeplugs.yaml
@@ -275,6 +275,231 @@ channels:
       vox: !<!default> ""
   - digital:
       id: ch16
+      name: 2RCG 9990 Parrot
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS2
+      radioId: id1
+      groupList: grp16
+      contact: cont1
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch17
+      name: 2RCG 3801 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp1
+      contact: cont2
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch18
+      name: 2RCG 3802 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp2
+      contact: cont3
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch19
+      name: 2RCG 3803 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp3
+      contact: cont4
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch20
+      name: 2RCG 3804 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp4
+      contact: cont5
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch21
+      name: 2RCG 3805 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp5
+      contact: cont6
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch22
+      name: 2RCG 3806 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp6
+      contact: cont7
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch23
+      name: 2RCG 3807 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp7
+      contact: cont8
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch24
+      name: 2RCG 3808 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp8
+      contact: cont9
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch25
+      name: 2RCG 3809 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp9
+      contact: cont10
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch26
+      name: 2RCG 3810 WICEN
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp10
+      contact: cont11
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch27
+      name: 2RCG 1 WW
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp11
+      contact: cont12
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch28
+      name: 2RCG 5 Broadcasts
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp12
+      contact: cont13
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch29
+      name: 2RCG 9 Local
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp13
+      contact: cont14
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch30
+      name: 2RCG 53 VK Chat
+      rxFrequency: 439.5
+      txFrequency: 434.5
+      rxOnly: false
+      admit: Always
+      colorCode: 1
+      timeSlot: TS1
+      radioId: id1
+      groupList: grp14
+      contact: cont15
+      power: !<!default> ""
+      timeout: !<!default> ""
+      vox: !<!default> ""
+  - digital:
+      id: ch31
       name: VK Simplex
       rxFrequency: 439.19999999999999
       txFrequency: 439.19999999999999
@@ -291,6 +516,14 @@ zones:
   - id: zone1
     name: VK2RWI Dural
     A: [ch1, ch2, ch3, ch4, ch5, ch6, ch7, ch8, ch9, ch10, ch11, ch12, ch13, ch14, ch15]
+    B: []
+  - id: zone2
+    name: VK2RCG Sydney
+    A: [ch16, ch17, ch18, ch19, ch20, ch21, ch22, ch23, ch24, ch25, ch26, ch27, ch28, ch29, ch30]
+    B: []
+  - id: zone3
+    name: VK Simplex
+    A: [ch31]
     B: []
 commercial:
   encryptionKeys:
