--- a/rt3s-codeplugs.yaml
+++ b/rt3s-codeplugs.yaml
@@ -747,7 +747,7 @@ zones:
     A: [ch16, ch17, ch18, ch19, ch20, ch21, ch22, ch23, ch24, ch25, ch26, ch27, ch28, ch29, ch30]
     B: []
   - id: zone3
-    name: VK2RMP
+    name: VK2RMP Austinmer
     A: [ch31, ch32, ch33, ch34, ch35, ch36, ch37, ch38, ch39, ch40, ch41, ch42, ch43, ch44, ch45]
     B: []
   - id: zone4
